fixed some resposibility problems and improved spacing of letters

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,8 @@
   }
 
   .dark {
+    /* --background: 224 71.4% 6.3%;
+     */
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 90%;
 
@@ -95,7 +97,6 @@ h1 {
   line-height: 2.25rem;
   letter-spacing: -0.028em;
   font-weight: 700;
-  
 }
 h2 {
   margin-bottom: 1.2rem;
@@ -112,7 +113,9 @@ h3 {
 
 code {
   background-color: rgb(17 24 39);
+  /* overflow-wrap: break-word; */
   color: white;
+  white-space: pre-wrap;
   margin-top: 1.5rem;
   margin-bottom: 2rem;
   padding: 8px; /* Optional: Add padding for spacing */
@@ -126,4 +129,5 @@ code {
 
 p {
   margin: 8px;
+  letter-spacing: 0.3px;
 }
